--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,5 @@ archives_base_name = lambdacontrols
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.32.0+1.16
-spruceui_version=2.0.4-1.16
-modmenu_version=1.14.6+build.31
+spruceui_version=2.1.1-1.16
+modmenu_version=1.16.8
