--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,18 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.5
-loader_version=0.11.3
+minecraft_version=1.17
+yarn_mappings=1.17+build.13
+loader_version=0.11.6
 
 # Mod Properties
-mod_version = 1.6.0
+mod_version = 1.7.0
 maven_group = dev.lambdaurora.lambdacontrols
 archives_base_name = lambdacontrols
+modrinth_id=W1D3UXEc
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.32.0+1.16
-spruceui_version=2.1.4-1.16
-modmenu_version=1.16.8
+fabric_version=0.36.0+1.17
+spruceui_version=3.1.0+1.17
+modmenu_version=2.0.2
