--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version=0.11.6
 
 # Mod Properties
 mod_version = 1.7.0
-maven_group = dev.lambdaurora.lambdacontrols
+maven_group = dev.lambdaurora
 archives_base_name = lambdacontrols
 modrinth_id=W1D3UXEc
 
