MidnightControls 0.2.0 - Fixes, improvements, compat
- Fix #4
- Fix #3 (maybe?)
- No longer break OptiFabric
- Better XBox controller icons (#7) by @Ivanoks
- Start of reimplementing REI compat
- Hide HUD when controller is missing

--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,9 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
-    id 'org.cadixdev.licenser' version '0.6.1'
     id 'com.modrinth.minotaur' version '1.2.+'
 }
 
-import net.fabricmc.loom.task.RemapJarTask
 import com.google.gson.GsonBuilder
 import com.google.gson.JsonObject
 import com.modrinth.minotaur.TaskModrinthUpload
@@ -41,14 +39,6 @@ String getMCVersionString() {
     return version[0] + '.' + version[1]
 }
 
-String getTerraformersMCMaven() {
-    def terraformersUrl = 'https://maven.terraformersmc.com/'
-    if (pingUrl(terraformersUrl))
-        return terraformersUrl
-    else
-        return 'https://maven.kotlindiscord.com/repository/terraformers/'
-}
-
 boolean pingUrl(String address) {
     try {
         def conn = (HttpURLConnection) new URL(address).openConnection()
@@ -65,7 +55,6 @@ String parseReadme() {
 
     def readme = (String) file('README.md').text
     readme = readme.replaceAll(excludeRegex, '')
-    readme = readme.replaceAll(linkRegex, '![$1](https://raw.githubusercontent.com/LambdAurora/midnightcontrols/1.17/$2)')
     return readme
 }
 
@@ -82,18 +71,12 @@ repositories {
         name 'CottonMC'
         url 'https://server.bbkr.space/artifactory/libs-snapshot'
     }
-    maven {
-        name 'TerraformersMC'
-        url getTerraformersMCMaven()
-        content {
-            includeGroup 'dev.emi'
-            includeGroup 'com.terraformersmc'
-        }
-    }
+    maven { url "https://maven.terraformersmc.com/releases/" }
     maven { url 'https://maven.kosmx.dev' }
     maven { url 'https://maven.shedaniel.me/' }
     maven { url 'https://jitpack.io' }
     maven { url "https://api.modrinth.com/maven" }
+    maven { url 'https://maven.quiltmc.org/repository/release'}
 }
 
 configurations {
@@ -121,10 +104,10 @@ dependencies {
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     // Compatibility mods
-    modImplementation("com.github.EnnuiL:okzoomer:e6a801b1a3") {
-        exclude group: 'com.terraformersmc'
-        exclude group: 'dev.lambdaurora'
-    }
+    modImplementation("maven.modrinth:ok-zoomer:${project.ok_zoomer_version}")
+    modImplementation "io.github.ennuil:LibZoomer:${project.libzoomer_version}"
+    modImplementation "org.quiltmc:quilt-json5:1.0.0"
+    modImplementation("me.shedaniel:RoughlyEnoughItems-runtime-fabric:${project.rei_version}")
     modImplementation "maven.modrinth:emotecraft:${project.emotecraft_version}"
     modImplementation "io.github.kosmx:bendy-lib:${project.bendylib_version}"
 
@@ -157,17 +140,6 @@ processResources {
     filesMatching('fabric.mod.json') {
         expand 'version': project.version
     }
-}
-
-jar {
-    from('LICENSE') {
-        rename { "${it}_${project.archivesBaseName}" }
-    }
-}
-
-license {
-    header file('HEADER')
-    include '**/*.java'
 }
 
 task publishModrinth(type: TaskModrinthUpload) {
