--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.18.1+build.22
 loader_version=0.13.3
 
 # Mod Properties
-mod_version = 0.1.0
+mod_version = 0.2.0
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 modrinth_id=W1D3UXEc
@@ -21,3 +21,6 @@ midnightlib_version=0.4.0
 modmenu_version=2.0.2
 emotecraft_version=2.1-MC1.18.1-fabric
 bendylib_version=2.0.+
+rei_version=7.4.456
+ok_zoomer_version=5.0.0-beta.3+1.17.1
+libzoomer_version = 0.3.0+1.17.1
