--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,7 @@ modmenu_version=2.0.2
 emotecraft_version=2.1-MC1.18.1-fabric
 bendylib_version=2.0.+
 rei_version=7.4.456
-ok_zoomer_version=5.0.0-beta.3+1.17.1
-libzoomer_version = 0.3.0+1.17.1
+
+# Ok Zoomer and LibZoomer are temporarily disabled for the time being, as we are currently using Reflection at runtime instead in OkZoomerCompat due to there being two major, completely incompatible API versions.
+# ok_zoomer_version=5.0.0-beta.3+1.17.1
+# libzoomer_version=0.3.0+1.17.1
