--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,10 @@ yarn_mappings=1.18.1+build.22
 loader_version=0.13.3
 
 # Mod Properties
-mod_version = 0.2.0
+mod_version = 0.3.0
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
-modrinth_id=W1D3UXEc
+modrinth_id=bXX9h73M
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
