MidnightControls 1.0.0 - Bedrock icon resourcepack
- Bring back Lambda-style XBox icons and add optional resourcepack for Bedrock-style icons (Closes #16)
- Make screens on which the controller behaves like a mouse configurable in the advanced config.

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     // modImplementation "io.github.ennuil:LibZoomer:${project.libzoomer_version}"
 
     modImplementation "org.quiltmc:quilt-json5:1.0.0"
+    //modImplementation "maven.modrinth:sodium:${project.sodium_version}"
     modImplementation("me.shedaniel:RoughlyEnoughItems-runtime-fabric:${project.rei_version}")
     modImplementation "maven.modrinth:emotecraft:${project.emotecraft_version}"
     modImplementation "io.github.kosmx:bendy-lib:${project.bendylib_version}"
