--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.18.1+build.22
 loader_version=0.13.3
 
 # Mod Properties
-mod_version = 0.3.0
+mod_version = 1.0.0
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 modrinth_id=bXX9h73M
@@ -16,6 +16,7 @@ modrinth_id=bXX9h73M
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
 fabric_version=0.46.6+1.18
+sodium_version=mc1.18.2-0.4.1
 spruceui_version=3.3.2+1.17
 midnightlib_version=0.4.0
 modmenu_version=2.0.2
