MidnightControls 1.1.0 - 1.19, Inventory Improvements
- Update to 1.19
- Make buttons for Item/Stack Grabbing and Quick Moving configurable
- Add Keybinds for moving between Fabric Creative Inventory Pages

--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,7 @@ dependencies {
 
     modImplementation "org.quiltmc:quilt-json5:1.0.0"
     //modImplementation "maven.modrinth:sodium:${project.sodium_version}"
-    modImplementation("me.shedaniel:RoughlyEnoughItems-runtime-fabric:${project.rei_version}")
+    //modImplementation("maven.modrinth:emi:${project.emi_version}")
     modImplementation "maven.modrinth:emotecraft:${project.emotecraft_version}"
     modImplementation "io.github.kosmx:bendy-lib:${project.bendylib_version}"
 
