--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.18.2+build.3
 loader_version=0.14.8
 
 # Mod Properties
-mod_version = 1.4.0-1.18
+mod_version = 1.4.1
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 modrinth_id=bXX9h73M
