--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.19+build.1
 loader_version=0.14.7
 
 # Mod Properties
-mod_version = 1.4.1
+mod_version = 1.4.2
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 modrinth_id=bXX9h73M
@@ -23,6 +23,7 @@ modmenu_version=4.0.0
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
 bendylib_version=2.0.+
 emi_version=0.2.0+1.19
+libgui_version=6.0.0+1.19
 
 # Ok Zoomer and LibZoomer are temporarily disabled for the time being, as we are currently using Reflection at runtime instead in OkZoomerCompat due to there being two major, completely incompatible API versions.
 # ok_zoomer_version=5.0.0-beta.3+1.17.1
