--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ repositories {
     }
     maven { url "https://maven.terraformersmc.com/releases/" }
     maven { url 'https://maven.kosmx.dev' }
+    maven { url 'https://maven.isxander.dev/releases' }
     maven { url 'https://maven.shedaniel.me/' }
     maven { url 'https://jitpack.io' }
     maven { url "https://api.modrinth.com/maven" }
@@ -115,6 +116,12 @@ dependencies {
     modImplementation("maven.modrinth:emi:${project.emi_version}")
     modImplementation "maven.modrinth:emotecraft:${project.emotecraft_version}"
     modImplementation "io.github.kosmx:bendy-lib:${project.bendylib_version}"
+    modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
+    modImplementation "maven.modrinth:inventory-tabs-updated:${project.inventorytabs_version}"
+    // Required for Inventory Tabs
+    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 
     modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
     include "maven.modrinth:midnightlib:${project.midnightlib_version}"
