--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.19.2+build.9
 loader_version=0.14.9
 
 # Mod Properties
-mod_version = 1.6.1-dev
+mod_version = 1.7.0
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 modrinth_id=bXX9h73M
@@ -27,6 +27,7 @@ libgui_version=6.0.0+1.19
 inventorytabs_version=inventorytabs-0.9.beta-1.19.x
 clothconfig_version=7.0.72
 yacl_version=0.1.2
+bedrockify_version=1.5+mc1.19.1-2
 
 # Ok Zoomer and LibZoomer are temporarily disabled for the time being, as we are currently using Reflection at runtime instead in OkZoomerCompat due to there being two major, completely incompatible API versions.
 # ok_zoomer_version=5.0.0-beta.3+1.17.1
