--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ dependencies {
     }
     include 'org.aperlambda:lambdajcommon:1.8.1'
 
-    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    modCompileOnlyApi "com.terraformersmc:modmenu:${project.modmenu_version}"
 
     // Compatibility mods
 
@@ -110,15 +110,15 @@ dependencies {
     // modImplementation("maven.modrinth:ok-zoomer:${project.ok_zoomer_version}")
     // modImplementation "io.github.ennuil:LibZoomer:${project.libzoomer_version}"
 
-    modImplementation "io.github.cottonmc:LibGui:${project.libgui_version}"
-    modImplementation "org.quiltmc:quilt-json5:1.0.0"
+    modCompileOnlyApi "io.github.cottonmc:LibGui:${project.libgui_version}"
+    modCompileOnlyApi "org.quiltmc:quilt-json5:1.0.0"
     modCompileOnly "maven.modrinth:sodium:${project.sodium_version}"
-    modImplementation("maven.modrinth:emi:${project.emi_version}")
-    modImplementation "maven.modrinth:emotecraft:${project.emotecraft_version}"
-    modImplementation "io.github.kosmx:bendy-lib:${project.bendylib_version}"
-    modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
-    modImplementation "maven.modrinth:inventory-tabs-updated:${project.inventorytabs_version}"
-    modImplementation "maven.modrinth:bedrockify:${project.bedrockify_version}"
+    modCompileOnlyApi "maven.modrinth:emi:${project.emi_version}"
+    modCompileOnlyApi "maven.modrinth:emotecraft:${project.emotecraft_version}"
+    modCompileOnlyApi "io.github.kosmx:bendy-lib:${project.bendylib_version}"
+    modCompileOnlyApi "dev.isxander:yet-another-config-lib:${project.yacl_version}"
+    modCompileOnlyApi "maven.modrinth:inventory-tabs-updated:${project.inventorytabs_version}"
+    modCompileOnlyApi "maven.modrinth:bedrockify:${project.bedrockify_version}"
     // Required for Inventory Tabs
     modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}") {
         exclude(group: "net.fabricmc.fabric-api")
