--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.9
-loader_version=0.14.9
+minecraft_version=22w43a
+yarn_mappings=22w43a+build.4
+loader_version=0.14.10
 
 # Mod Properties
 mod_version = 1.7.1
@@ -15,10 +15,10 @@ modrinth_id=bXX9h73M
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.60.0+1.19.2
+fabric_version=0.65.1+1.19.3
 sodium_version=mc1.19.2-0.4.4
 spruceui_version=4.0.0+1.19
-midnightlib_version=0.6.1
+midnightlib_version=0.6.2
 modmenu_version=4.0.6
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
 bendylib_version=2.0.+
