--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ modrinth_id=bXX9h73M
 fabric_version=0.65.1+1.19.3
 sodium_version=mc1.19.2-0.4.4
 spruceui_version=4.0.0+1.19
-midnightlib_version=0.6.2
+midnightlib_version=0.6.1+22w43a
 modmenu_version=4.0.6
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
 bendylib_version=2.0.+
