--- a/gradle.properties
+++ b/gradle.properties
@@ -3,26 +3,26 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=22w43a
-yarn_mappings=22w43a+build.4
-loader_version=0.14.10
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.2
+loader_version=0.14.11
 
 # Mod Properties
-mod_version = 1.7.1
+mod_version = 1.7.2
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 modrinth_id=bXX9h73M
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.65.1+1.19.3
+fabric_version=0.68.1+1.19.3
 sodium_version=mc1.19.2-0.4.4
-spruceui_version=4.0.0+1.19
-midnightlib_version=0.6.1+22w43a
-modmenu_version=4.0.6
+spruceui_version=4.1.0+1.19.3
+midnightlib_version=1.1.0-fabric
+modmenu_version=5.0.1
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
 bendylib_version=2.0.+
-emi_version=0.4.0+1.19
+emi_version=0.5.0+1.19.3
 libgui_version=6.0.0+1.19
 inventorytabs_version=inventorytabs-0.9.beta-1.19.x
 clothconfig_version=7.0.72
