--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.12
+minecraft_version=23w06a
+yarn_mappings=23w06a+build.14
+loader_version=0.14.14
 
 # Mod Properties
 mod_version = 1.7.3
@@ -15,9 +15,9 @@ modrinth_id=bXX9h73M
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.71.0+1.19.3
+fabric_version=0.74.0+1.19.4
 sodium_version=mc1.19.2-0.4.4
-spruceui_version=4.1.0+1.19.3
+spruceui_version=4.2.0+23w06a
 midnightlib_version=1.1.0-fabric
 modmenu_version=5.0.1
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
