--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=23w06a
-yarn_mappings=23w06a+build.14
-loader_version=0.14.14
+minecraft_version=1.19.4-pre4
+yarn_mappings=1.19.4-pre4+build.1
+loader_version=0.14.17
 
 # Mod Properties
 mod_version = 1.7.4
@@ -15,10 +15,10 @@ modrinth_id=bXX9h73M
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.74.0+1.19.4
+fabric_version=0.75.3+1.19.4
 sodium_version=mc1.19.2-0.4.4
 spruceui_version=4.2.0+23w06a
-midnightlib_version=1.1.0-fabric
+midnightlib_version=fabric-1.2.0
 modmenu_version=5.0.1
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
 bendylib_version=2.0.+
