--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ boolean isMCVersionNonRelease() {
 }
 
 String getMCVersionString() {
-    if (isMCVersionNonRelease() || project.minecraft_version == "1.19.3") {
+    if (isMCVersionNonRelease() || project.minecraft_version == "1.19.4") {
         return project.minecraft_version
     }
     def version = project.minecraft_version.split('\\.')
@@ -78,9 +78,6 @@ repositories {
     maven { url 'https://jitpack.io' }
     maven { url "https://api.modrinth.com/maven" }
     maven { url 'https://maven.quiltmc.org/repository/release'}
-    flatDir {
-        dirs "localMaven"
-    }
 }
 
 configurations {
@@ -127,7 +124,7 @@ dependencies {
     modCompileOnlyApi "maven.modrinth:inventory-tabs-updated:${project.inventorytabs_version}"
     modCompileOnlyApi "maven.modrinth:bedrockify:${project.bedrockify_version}"
     // Required for Inventory Tabs
-    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}") {
+    modCompileOnlyApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
 
