--- a/gradle.properties
+++ b/gradle.properties
@@ -3,31 +3,31 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
-loader_version=0.14.17
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
+loader_version=0.14.18
 
 # Mod Properties
-mod_version = 1.8.1
+mod_version = 1.8.2
 maven_group = eu.midnightdust
 archives_base_name = midnightcontrols
 modrinth_id=bXX9h73M
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.75.3+1.19.4
-sodium_version=mc1.19.2-0.4.4
-spruceui_version=4.2.0+1.19.4
+fabric_version=0.83.0+1.20
+sodium_version=mc1.20-0.4.10
+spruceui_version=5.0.0+1.20
 midnightlib_version=1.2.1-fabric
-modmenu_version=5.0.1
+modmenu_version=7.0.0
 emotecraft_version=2.1.3-SNAPSHOT-build.29-MC1.19-fabric
 bendylib_version=2.0.+
 emi_version=0.5.0+1.19.3
-libgui_version=6.0.0+1.19
-inventorytabs_version=inventorytabs-0.9.beta-1.19.x
-clothconfig_version=7.0.72
+libgui_version=7.1.0+1.19.4
+inventorytabs_version=inventorytabs-0.9.0-beta-1.19.3
+clothconfig_version=11.0.99
 yacl_version=2.2.0
-bedrockify_version=1.5+mc1.19.1-2
+bedrockify_version=1.9+mc1.20
 
 # Ok Zoomer and LibZoomer are temporarily disabled for the time being, as we are currently using Reflection at runtime instead in OkZoomerCompat due to there being two major, completely incompatible API versions.
 # ok_zoomer_version=5.0.0-beta.3+1.17.1
